# tty-read-rs

./: Cargo.toml  README.md
src/: lib.rs  reader_options.rs  term_reader.rs
